feat: wip auth
